--- a/club/templates/base.html
+++ b/club/templates/base.html
@@ -15,8 +15,8 @@
 <div class="navbar-header"> 
 <a class="navbar-brand" href="{% url 'index' %}">Python Club</a> 
 </div> 
-<ul class="nav navbar-nav"> 
-<li>Dummy</li>
+<ul class="nav navbar-nav">
+  <li><a href="{% url 'resources' %}"></a></li> 
 <li>Dummy</li> 
 </ul> 
 </div> 
