--- a/club/templates/base.html
+++ b/club/templates/base.html
@@ -17,7 +17,7 @@
 </div> 
 <ul class="nav navbar-nav">
   <li><a href="{% url 'resources' %}"></a></li> 
-<li>Dummy</li> 
+<li><a href="{% url 'meetings' %}"></a></li> 
 </ul> 
 </div> 
 </nav> 
